tdf#153549 update extended tips in Chapter Numbering dialog
Change-Id: Ic5d13c6f7e000f5b568e3efa175bdf19935a0a0c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147126
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/sw/uiconfig/swriter/ui/outlinenumbering.ui
+++ b/sw/uiconfig/swriter/ui/outlinenumbering.ui
@@ -331,7 +331,7 @@
     </child>
     <child internal-child="accessible">
       <object class="AtkObject" id="OutlineNumberingDialog-atkobject">
-        <property name="AtkObject::accessible-description" translatable="yes" context="outlinenumbering|extended_tip|OutlineNumberingDialog">Specifies the numbering scheme and the hierarchy for chapter numbering in the current document.</property>
+        <property name="AtkObject::accessible-description" translatable="yes" context="outlinenumbering|extended_tip|OutlineNumberingDialog">Use this dialog to specify the numbering scheme for headings in the current document. For each outline level, you can assign a paragraph style and a numbering scheme. Use “1-10” to apply the same setting for all outline levels.</property>
       </object>
     </child>
   </object>
