tdf#150164  PDF exports bookmarks as named destinations
   partial revert of c3cdff249701fa48beee5cf31311ceb80bfe6af6

Change-Id: I01fa72faf6365d0f999872562aaaa6139ed61d60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147133
Tested-by: Jenkins
Reviewed-by: Seth Chaiklin <sdc.blanco@youmail.dk>

--- a/filter/uiconfig/ui/pdflinkspage.ui
+++ b/filter/uiconfig/ui/pdflinkspage.ui
@@ -26,15 +26,16 @@
             <property name="row-spacing">6</property>
             <child>
               <object class="GtkCheckButton" id="export">
-                <property name="label" translatable="yes" context="pdflinkspage|export">Export outlines as named destinations</property>
+                <property name="label" translatable="yes" context="pdflinkspage|export">Export bookmarks as named destinations</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">False</property>
                 <property name="use-underline">True</property>
                 <property name="draw-indicator">True</property>
+                <property name="tooltip_text" translatable="yes" context="pdflinkspage|export|tooltip_text">Enable the checkbox to export bookmarks in your document as named destinations in the PDF document.</property>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="export-atkobject">
-                    <property name="AtkObject::accessible-description" translatable="yes" context="pdflinkspage|extended_tip|export">Enable the checkbox to export the names of objects in your document as valid bookmark targets. This allows you to link to those objects by name from other documents.</property>
+                    <property name="AtkObject::accessible-description" translatable="yes" context="pdflinkspage|extended_tip|export">Enable the checkbox to export bookmarks in your document as named destinations in the PDF document. The destinations correspond to the location of your bookmarks. Use these destinations to create URL links that point to these locations in the PDF document.</property>
                   </object>
                 </child>
               </object>
