tdf#153596 "outline" -> "headings"
    TOC displays "headings" if this option is checked.
    The tooltip/extended tip explains the relation to outline level.

Change-Id: I28a7bc4da7da45398c859fa71be019bd127f53b3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147240
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Jenkins

--- a/sw/uiconfig/swriter/ui/tocindexpage.ui
+++ b/sw/uiconfig/swriter/ui/tocindexpage.ui
@@ -347,7 +347,7 @@
                     <property name="column-spacing">12</property>
                     <child>
                       <object class="GtkCheckButton" id="fromheadings">
-                        <property name="label" translatable="yes" context="tocindexpage|fromheadings">Outline</property>
+                        <property name="label" translatable="yes" context="tocindexpage|fromheadings">Headings</property>
                         <property name="can-focus">True</property>
                         <property name="receives-default">False</property>
                         <property name="no-show-all">True</property>
