tdf#153485  align command names to show headings by outline level
   There are three different places where a command can be given
   to select the maximum allowed outline level for a displayed heading
   in Navigator. This patch changes all these command labels to be
   identical, so that users can recognize them as identical.

   "Outline Level" -> "Show to Outline Level" in Navigator context menu
   "Heading Levels Shown" -> "Show to Outline Level" in Navigator panel
   "Show Outline Content to Level" -> "Show to Outline Level" in
        .uno:OutlineLevelsShown and its popup dialog box.

Change-Id: I7b1eac8067251a0e2faf38f2747dcfcf1993cebb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147247
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sw/uiconfig/swriter/ui/navigatorpanel.ui
+++ b/sw/uiconfig/swriter/ui/navigatorpanel.ui
@@ -513,11 +513,11 @@
                     <child>
                       <object class="GtkMenuToolButton" id="headings">
                         <property name="visible">True</property>
-                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|headings|tooltip_text">Heading Levels Shown</property>
+                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|headings|tooltip_text">Show Up to Outline Level</property>
                         <property name="icon-name">sw/res/sc20236.png</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="headings-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="navigatorpanel|extended_tip|headings">Click this icon, and then choose the number of heading outline levels that you want to view in the Navigator window.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="navigatorpanel|extended_tip|headings">Use this option to control what headings in the document structure are displayed in the Navigator window. Click the icon, and choose an outline level number. Any heading with an outline number less than or equal to the selected number will be displayed.</property>
                           </object>
                         </child>
                       </object>
