--- a/sw/uiconfig/swriter/ui/navigatorcontextmenu.ui
+++ b/sw/uiconfig/swriter/ui/navigatorcontextmenu.ui
@@ -438,7 +438,7 @@
       <object class="GtkMenuItem" id="1">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <property name="label" translatable="yes" context="navigatorcontextmenu|STR_OUTLINE_LEVEL">Outline Level</property>
+        <property name="label" translatable="yes" context="navigatorcontextmenu|STR_OUTLINE_LEVEL">Show Up to Outline Level</property>
         <property name="use-underline">True</property>
         <child type="submenu">
           <object class="GtkMenu" id="outlinelevel">
