tdf#153243  change "Numbering by Chapter" and "Outline Level" labels
    Changes are made both for Insert - Caption - Caption Options
    and AutoCaption.

    "Chapter" was incorrect, because the option uses the number
    of the immediately prior heading. Now the label is
    "Heading Number Prefix" (because the number is always
    prepended to the caption number). Also, the label
    "Outline Level" is renamed "Up to level" because its
    function is to specify how many levels in the heading
    number are displayed. There is a tooltip and extended tip
    for "Up to level" that makes it clear that outline levels
    are involved.


Change-Id: I1ca8c881c8ce07870efc226b075fc8ba7f27b7e5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147280
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sw/uiconfig/swriter/ui/captionoptions.ui
+++ b/sw/uiconfig/swriter/ui/captionoptions.ui
@@ -102,10 +102,11 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="hexpand">True</property>
-                        <property name="tooltip_text" translatable="yes" context="captionoptions|tooltip_text|level">Specify the maximum outline level of the immediately prior heading number to include in the caption number.</property>
+                        <property name="tooltip_text" translatable="yes" context="captionoptions|tooltip_text|level">Select the number of outline levels of the immediately prior heading number to prepend to the caption number.</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="level-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="captionoptions|extended_tip|level">Specify the maximum outline level of the immediately prior heading number to include in the caption number. For numbers to appear, the selected heading must have numbering applied.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="captionoptions|extended_tip|level">Specify the number of outline levels of the immediately prior heading number to prepend to the caption number. For example, select “2” to use the first two numbers in the heading. If [None] is selected, then no heading number is prepended.
+.</property>
                           </object>
                         </child>
                       </object>
@@ -136,7 +137,7 @@
                       <object class="GtkLabel" id="label5">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes" context="captionoptions|label5">_Outline level:</property>
+                        <property name="label" translatable="yes" context="captionoptions|label5">_Up to level:</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">level</property>
                         <property name="xalign">1</property>
@@ -166,7 +167,7 @@
                   <object class="GtkLabel" id="label1">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes" context="captionoptions|label1">Numbering by Chapter</property>
+                    <property name="label" translatable="yes" context="captionoptions|label1">Heading Number Prefix</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
