--- a/sw/uiconfig/swriter/ui/optcaptionpage.ui
+++ b/sw/uiconfig/swriter/ui/optcaptionpage.ui
@@ -256,7 +256,7 @@
                       <object class="GtkLabel" id="label4">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes" context="optcaptionpage|label4">Outline level:</property>
+                        <property name="label" translatable="yes" context="optcaptionpage|label4">Up to level:</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">level</property>
                         <property name="xalign">0</property>
@@ -306,13 +306,13 @@
                         <property name="can_focus">False</property>
                         <property name="valign">center</property>
                         <property name="hexpand">True</property>
-                        <property name="tooltip_text" translatable="yes" context="optcaptionpage|tooltip_text|level">Specify the maximum outline level of the immediately prior heading to prepend to the caption number.</property>
+                        <property name="tooltip_text" translatable="yes" context="optcaptionpage|tooltip_text|level">Specify the number of outline levels of the immediately prior heading number to prepend to the caption number. If [None] is selected, then no heading number is prepended.</property>
                         <items>
                           <item translatable="yes" context="optcaptionpage|level">None</item>
                         </items>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="level-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip|level">Use this option to specify the outline level of the heading number that should be prepended to the caption number. The first immediately prior heading with an outline level no greater than the specified number here is used to supply the numbering that is prepended.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip|level">Specify the number of outline levels of the immediately prior heading number to prepend to the caption number. For example, select “2” to use the first two numbers in the heading. If [None] is selected, then no heading numbered is prepended.</property>
                           </object>
                         </child>
                       </object>
@@ -327,7 +327,7 @@
                   <object class="GtkLabel" id="label11">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes" context="optcaptionpage|label11">Numbering by Chapter</property>
+                    <property name="label" translatable="yes" context="optcaptionpage|label11">Heading Number Prefix</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
