--- a/sw/uiconfig/swriter/ui/tocindexpage.ui
+++ b/sw/uiconfig/swriter/ui/tocindexpage.ui
@@ -1237,7 +1237,7 @@
           </packing>
         </child>
         <child>
-          <!-- n-columns=2 n-rows=2 -->
+          <!-- n-columns=2 n-rows=1 -->
           <object class="GtkGrid" id="grid14">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
@@ -1263,27 +1263,13 @@
               <packing>
                 <property name="left-attach">0</property>
                 <property name="top-attach">0</property>
-                <property name="width">2</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="parastyleft">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="label" translatable="yes" context="tocindexpage|parastyleft">Paragraph style:</property>
-                <property name="use-underline">True</property>
-                <property name="mnemonic-widget">display</property>
-                <property name="xalign">0</property>
-              </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">1</property>
               </packing>
             </child>
             <child>
               <object class="GtkComboBoxText" id="parastyle">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <property name="hexpand">True</property>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="parastyle-atkobject">
                     <property name="AtkObject::accessible-description" translatable="yes" context="tocindexpage|extended_tip|parastyle">Select the paragraph style for which you want to create index entries.</property>
@@ -1292,7 +1278,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">1</property>
+                <property name="top-attach">0</property>
               </packing>
             </child>
           </object>
