--- a/sw/uiconfig/swriter/ui/tocentriespage.ui
+++ b/sw/uiconfig/swriter/ui/tocentriespage.ui
@@ -582,14 +582,15 @@
                             </child>
                             <child>
                               <object class="GtkButton" id="chapterno">
-                                <property name="label" translatable="yes" context="tocentriespage|chapterno">Chapter No.</property>
+                                <property name="label" translatable="yes" context="tocentriespage|chapterno">Heading No.</property>
                                 <property name="can-focus">True</property>
                                 <property name="receives-default">True</property>
                                 <property name="no-show-all">True</property>
                                 <property name="use-underline">True</property>
+                                <property name="tooltip-text" translatable="yes" context="tocentriespage|chapterno|tooltip_text">Insert in the entry structure to include heading numbers for the selected level in the generated index.</property>
                                 <child internal-child="accessible">
                                   <object class="AtkObject" id="chapterno-atkobject">
-                                    <property name="AtkObject::accessible-description" translatable="yes" context="tocentriespage|extended_tip|chapterno">Inserts the chapter number. To assign chapter numbering to a heading style, choose Tools - Chapter Numbering.</property>
+                                    <property name="AtkObject::accessible-description" translatable="yes" context="tocentriespage|extended_tip|chapterno">Insert in the entry structure to include heading numbers for the selected level in the generated index. To enable numbers for headings, choose Tools - Heading Numbering.</property>
                                   </object>
                                 </child>
                               </object>
